--- a/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/Properties/launchSettings.json
+++ b/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/Properties/launchSettings.json
@@ -1,11 +1,11 @@
 {
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "RosterDutyReminder": {
+    "ElectricityBillReminder": {
       "commandName": "Project",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development",
-        "AWS_LAMBDA_RUNTIME_API": "localhost:9001/RosterDutyReminder",
+        "AWS_LAMBDA_RUNTIME_API": "localhost:9001/ElectricityBillReminder"
       }
     }
   }
