--- a/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/ToongabbieUtility.ElectricityBillReminder.csproj
+++ b/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/ToongabbieUtility.ElectricityBillReminder.csproj
@@ -5,8 +5,6 @@
     <TargetFramework>net8.0</TargetFramework>
     <InvariantGlobalization>true</InvariantGlobalization>
     <IsPackable>false</IsPackable>
-    <AssemblyName>ToongabbieUtility.RosterDutyReminder</AssemblyName>
-    <RootNamespace>ToongabbieUtility.RosterDutyReminder</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(TargetFramework)' == 'net6.0'">
@@ -29,13 +27,14 @@
 
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.3" />
-    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.302.24" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.300" />
+    <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.302.24" />
     <PackageReference Include="AWSSDK.SecurityToken" Version="3.7.300.84" />
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.301.31" />
     <PackageReference Include="AWSSDK.SSO" Version="3.7.300.83" />
     <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.301.78" />
     <PackageReference Include="Stackage.Aws.Lambda" Version="0.18.0" />
+    <PackageReference Include="TimeZoneConverter" Version="6.1.0" />
   </ItemGroup>
 
   <ItemGroup>
