Implemented electricity bill message.

--- a/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/appsettings.json
+++ b/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Stackage.Aws.Lambda.LoggingHttpClientHandler": "Warning"
     }
-  }
+  },
+  "ElectricityUnitPrice": 0.30
 }
