--- a/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/ToongabbieUtility.ElectricityBillReminder.csproj
+++ b/ElectrityBillReminder/lambda/ToongabbieUtility.ElectricityBillReminder/ToongabbieUtility.ElectricityBillReminder.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <InvariantGlobalization>true</InvariantGlobalization>
+    <InvariantGlobalization>false</InvariantGlobalization>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -38,6 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\ToongabbieUtility.Common\ToongabbieUtility.Common.csproj" />
     <ProjectReference Include="..\..\..\ToongabbieUtility.Domain\ToongabbieUtility.Domain.csproj" />
   </ItemGroup>
 
