--- a/ToongabbieUtility.Common/ToongabbieUtility.Common.csproj
+++ b/ToongabbieUtility.Common/ToongabbieUtility.Common.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ToongabbieUtility.Domain\ToongabbieUtility.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
