New RosterDutyReminder lambda

--- a/RosterDutyReminder/lambda/ToongabbieUtility.RosterDutyReminder/appsettings.json
+++ b/RosterDutyReminder/lambda/ToongabbieUtility.RosterDutyReminder/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Stackage.Aws.Lambda.LoggingHttpClientHandler": "Warning"
     }
+  },
+  "DynamoDb": {
+    "LocalMode": false,
+    "LocalServiceUrl": "http://localhost:8001",
+    "TableNamePrefix": "tu-test-mczw-"
   }
 }
