--- a/src/ToongabbieUtility.RosterDutyReminder/ToongabbieUtility.RosterDutyReminder.csproj
+++ b/src/ToongabbieUtility.RosterDutyReminder/ToongabbieUtility.RosterDutyReminder.csproj
@@ -41,4 +41,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\ToongabbieUtility.Domain\ToongabbieUtility.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
