--- a/src/ToongabbieUtility.RosterDutyReminder/appsettings.json
+++ b/src/ToongabbieUtility.RosterDutyReminder/appsettings.json
@@ -21,5 +21,8 @@
     "LocalServiceUrl": "http://localhost:8001",
     "TableNamePrefix": "tu-test-mczw-"
   },
+  "AppConfig": {
+    "ReloadInSeconds": 60
+  },
   "EnableSMS": false
 }
