--- a/src/ToongabbieUtility.RosterDutyReminder/ToongabbieUtility.RosterDutyReminder.csproj
+++ b/src/ToongabbieUtility.RosterDutyReminder/ToongabbieUtility.RosterDutyReminder.csproj
@@ -12,6 +12,7 @@
     <PublishReadyToRun>true</PublishReadyToRun>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="6.2.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0" />
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.7.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.1" />
