--- a/src/ToongabbieUtility.ElectricityBillReminder/ToongabbieUtility.ElectricityBillReminder.csproj
+++ b/src/ToongabbieUtility.ElectricityBillReminder/ToongabbieUtility.ElectricityBillReminder.csproj
@@ -46,6 +46,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ToongabbieUtility.Common\ToongabbieUtility.Common.csproj" />
+    <ProjectReference Include="..\ToongabbieUtility.Common\ToongabbieUtility.Common.csproj" />
   </ItemGroup>
 </Project>
