--- a/test/ToongabbieUtility.Common.Tests/ToongabbieUtility.Common.Tests.csproj
+++ b/test/ToongabbieUtility.Common.Tests/ToongabbieUtility.Common.Tests.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ToongabbieUtility.Common\ToongabbieUtility.Common.csproj" />
+      <ProjectReference Include="..\..\src\ToongabbieUtility.Common\ToongabbieUtility.Common.csproj" />
     </ItemGroup>
 
 </Project>
