Move email to reminder lambda

--- a/src/ToongabbieUtility.ElectricityBillReminder/appsettings.json
+++ b/src/ToongabbieUtility.ElectricityBillReminder/appsettings.json
@@ -25,5 +25,6 @@
     "ReloadInSeconds": 60
   },
   "EnableSMS": false,
-  "ElectricityUnitPrice": 0.30
+  "ElectricityUnitPrice": 0.30,
+  "HeaterBillTopicArn": "arn:aws:sns:ap-southeast-2:773631419510:test5-app-MySNSTopic-Z7HWKK6EJVXQ"
 }
