--- a/src/ToongabbieUtility.HeaterUsageTracker/ToongabbieUtility.HeaterUsageTracker.csproj
+++ b/src/ToongabbieUtility.HeaterUsageTracker/ToongabbieUtility.HeaterUsageTracker.csproj
@@ -10,6 +10,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <!-- Generate ready to run images during publishing to improvement cold starts. -->
     <PublishReadyToRun>true</PublishReadyToRun>
+    <UserSecretsId>cefb4a68-d378-4357-8c2e-2b39704ec37e</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="6.2.0" />
