--- a/src/ToongabbieUtility.HeaterUsageTracker/ToongabbieUtility.HeaterUsageTracker.csproj
+++ b/src/ToongabbieUtility.HeaterUsageTracker/ToongabbieUtility.HeaterUsageTracker.csproj
@@ -44,4 +44,9 @@
   <ItemGroup>
     <ProjectReference Include="..\ToongabbieUtility.Common\ToongabbieUtility.Common.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
